# D3d12infoGUI

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: CI.yml  Package.yml
build_scripts/: archive_package.ps1  build.ps1  clean.ps1  format.ps1  package.ps1  package_release.ps1  pre_commit.ps1  rebuild.ps1
scripts/: build.ps1  clean.ps1  configure.ps1  install_build_dependencies.ps1  package.ps1  rebuild.ps1  tidy.ps1
source/: .clang-format  CMakeLists.txt
source/GUI/: CMakeLists.txt
source/GUI/assets/: assets.rc
source/GUI/html/: Escape.ps1  Report.css  Report.html  Report.js  Reports.js  Reports.json  default.js  index.html
source/GUI/private/: embed.py  embed_extractor.cpp  embed_extractor.h  main.cpp  report_generator.cpp  report_generator.h  subprocess.cpp  subprocess.h  window.cpp  window.h
source/GUI/public/: precompiled_header.h
source/db-server/: .gitignore  DBSchema.sql  database_common.js  main.js  notification_handler.js  package-lock.json  package.json  upgrade.js
source/db-server/StructureDesc/: all_properites.json  required_properites.json  submit_required_properties.json  submit_unique_properties.json
source/db-server/UpgradeScripts/: To_0_1_2.sql  To_1_1_0.sql  To_1_2_0.sql  To_1_3_0.sql
source/frontend/: gui-webpack.config.js  gui-webpack.js  pack-all.ps1  package-lock.json  package.json  reports.json  website-about-webpack.js  website-architecture-table-webpack.js  website-assets-webpack.js  website-can-i-use-webpack.js  website-compare-webpack.js  website-feature-table-webpack.js  website-id-webpack.js  website-index-webpack.js  website-shared-webpack.js  website-webpack.config.js
source/frontend/assets/css/: about.css  architecture_table.css  can_i_use.css  feature_table.css  icons.css  main.css  report_table.css
source/frontend/assets/favicon/: favicon_header.html  site.webmanifest
source/frontend/assets/html_gui/: data.js  index.html  reports.js  reports.json
source/frontend/assets/html_website/: ArchitectureTable.html  CanIUse.html  FeatureTable.html  about.html  compare.html  feature_table.html  header.html  id.html  index.html
source/frontend/assets/js/: arch_classifier.mjs  arch_stats.mjs  constants.mjs  cookies.mjs  feature_table_constants.mjs  format_table.mjs  globals.mjs  gui.mjs  html.mjs  preload_style.mjs  properties.mjs  report_container.mjs  server.mjs  settings.mjs  theme_switch.mjs  website_architecture_table.mjs  website_can_i_use.mjs  website_compare.mjs  website_feature_table.mjs  website_id.mjs  website_index.mjs  website_report_viewer.mjs  website_shared.mjs
source/frontend/scripts/: update-steam-stats.py
source/website/: ArchitectureTable.html  CanIUse.html  FeatureTable.html  FeatureTable.js  ID.html  Report.css  Report.js  about.html  about.js  arhitecture_table.js  assets.js  can_i_use.js  compare.html  compare.js  feature_table.html  feature_table.js  id.js  index.html  index.js  opensearch.xml  shared.js
